backend/test_results.txt

=================================== ERRORS ====================================
_____________ ERROR collecting tests/test_advanced_integration.py _____________
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\2000152842\Downloads\ai-ppt-generator\backend\tests\test_advanced_integration.py", line 250
E       def test_content_slide_snapshot_Modern Minimalist_theme(self):
E                                              ^^^^^^^^^^^^^^^^
E   SyntaxError: expected '('
------------------------------- Captured stdout -------------------------------
2026-04-24 10:33:26 [info     ] loading_provider_configuration
2026-04-24 10:33:26 [info     ] provider_configuration_loaded  fallbacks=[] primary=claude
2026-04-24 10:33:26 [info     ] langsmith_tracing_disabled
2026-04-24 10:33:26 [info     ] primary_provider_set           provider=claude
2026-04-24 10:33:26 [info     ] health_monitor_initialized     primary=claude
__________ ERROR collecting tests/test_export_templates_admin_api.py __________
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\2000152842\Downloads\ai-ppt-generator\backend\tests\test_export_templates_admin_api.py", line 470
E       html_Modern Minimalist = _build_preview_html([], "modern-minimalist")
E                   ^^^^^^^^^^
E   SyntaxError: invalid syntax
============================== warnings summary ===============================
app\agents\research.py:231
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:231: PydanticDeprecatedSince20: `min_items` is deprecated and will be removed, use `min_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    risks: List[str] = Field(description="Business risks and challenges", min_items=3, max_items=6)

app\agents\research.py:231
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:231: PydanticDeprecatedSince20: `max_items` is deprecated and will be removed, use `max_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    risks: List[str] = Field(description="Business risks and challenges", min_items=3, max_items=6)

app\agents\research.py:232
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:232: PydanticDeprecatedSince20: `min_items` is deprecated and will be removed, use `min_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    opportunities: List[str] = Field(description="Business opportunities and benefits", min_items=3, max_items=6)

app\agents\research.py:232
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:232: PydanticDeprecatedSince20: `max_items` is deprecated and will be removed, use `max_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    opportunities: List[str] = Field(description="Business opportunities and benefits", min_items=3, max_items=6)

app\agents\research.py:233
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:233: PydanticDeprecatedSince20: `min_items` is deprecated and will be removed, use `min_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    terminology: List[str] = Field(description="Domain-specific terminology", min_items=5, max_items=10)

app\agents\research.py:233
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:233: PydanticDeprecatedSince20: `max_items` is deprecated and will be removed, use `max_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    terminology: List[str] = Field(description="Domain-specific terminology", min_items=5, max_items=10)

app\agents\research.py:238
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:238: PydanticDeprecatedSince20: `min_items` is deprecated and will be removed, use `min_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    sections: List[str] = Field(description="6-10 logical sections for the presentation", min_items=6, max_items=10)

app\agents\research.py:238
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\research.py:238: PydanticDeprecatedSince20: `max_items` is deprecated and will be removed, use `max_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    sections: List[str] = Field(description="6-10 logical sections for the presentation", min_items=6, max_items=10)

app\agents\data_enrichment.py:187
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\data_enrichment.py:187: PydanticDeprecatedSince20: `min_items` is deprecated and will be removed, use `min_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    ranges: List[DataRange] = Field(description="List of metric ranges", min_items=5, max_items=15)

app\agents\data_enrichment.py:187
  C:\Users\2000152842\Downloads\ai-ppt-generator\backend\app\agents\data_enrichment.py:187: PydanticDeprecatedSince20: `max_items` is deprecated and will be removed, use `max_length` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.13/migration/
    ranges: List[DataRange] = Field(description="List of metric ranges", min_items=5, max_items=15)

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/test_advanced_integration.py
ERROR tests/test_export_templates_admin_api.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
10 warnings, 2 errors in 26.46s
